Counters almost done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p class="profile-title">Личный кабинет</p>
 				<p class="balance" id="bal">Баланс</p>
 				<p class="book-counter" id="book-counter">Вы купили 0 книги</p>
-				<p class="how-much">На сумму 280</p>
+				<p class="how-much" id="how-much"></p>
 			</div>
 		</div>
 		<script src="index.js"></script>
