Main functions done

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 				<div class="selection" id="selection">
 				</div>
 			</div>
-			<div class="profile">
+			<div class="profile" id="profile">
 				<p class="profile-title">Личный кабинет</p>
 				<p class="balance" id="bal">Баланс</p>
 				<p class="book-counter" id="book-counter">Вы купили 0 книги</p>
 				<p class="how-much" id="how-much"></p>
+				<p class='no-money' id='no-money'></p>
 			</div>
 		</div>
 		<script src="index.js"></script>
